# siprec_metadata

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  pugiconfig.hpp  siprec_metadata.cpp  siprec_metadata.h
tests/unit/: CMakeLists.txt  main.cpp
